--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   easy_localization: ^3.0.7+1
   flutter_bloc: ^9.1.1
+  get_it: ^8.0.3
   go_router: ^15.2.4
   json_annotation: ^4.9.0
   json_serializable: ^6.9.5
@@ -24,8 +25,10 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   build_runner: ^2.5.4
+  flutter_gen: ^5.10.0
   flutter_lints: ^5.0.0
   freezed: ^3.0.6
+  very_good_analysis: ^7.0.0
 
 flutter:
   uses-material-design: true
