--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   easy_localization: ^3.0.7+1
   flutter_bloc: ^9.1.1
+  freezed_annotation: ^3.0.0
   get_it: ^8.0.3
   go_router: ^15.2.4
   json_annotation: ^4.9.0
