--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
     sdk: flutter
   bloc: ^9.0.0
   cupertino_icons: ^1.0.8
+  dio: ^5.8.0+1
   easy_localization: ^3.0.7+1
   flutter_bloc: ^9.1.1
   freezed_annotation: ^3.0.0
