--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,10 @@ dependencies:
   go_router: ^15.2.4
   json_annotation: ^4.9.0
   json_serializable: ^6.9.5
+  logger_service:
+    git:
+      url: https://github.com/foresightmobile/logger_service.git
+      ref: main
   url_launcher: ^6.3.1
 
 dev_dependencies:
